--- a/sample.env
+++ b/sample.env
@@ -35,3 +35,8 @@ DEFAULT_LOG_FORMAT=console
 # Space seperaed list of trusted proxies in CIDR format. e.g. if you are behind a reverse proxy at 10.0.0.5 this would be "10.0.0.5/32". 
 # If the proxy can change it's IP to any 10.0.0.x/24 address then you could set this to "10.0.0.0/24" to trust the whole network.
 # DEFAULT_TRUSTED_PROXIES=
+
+# Docker
+CONTAINER_SOCKET=/var/run/docker.sock
+# Podman
+# CONTAINER_SOCKET=/var/run/podman/podman.sock
